--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=9190
 # JDBC properties
 #
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/basmaOrderDB?useSSL=false&serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=postgres
