--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/basmaOrderDB?useSSL=false&serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.cloud.config.import-check.enabled=false
+
 
 
