add some uri abstraction

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 #
 # JDBC properties
 #
+spring.cloud.config.uri=http://localhost:8888
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/basmaOrderDB?useSSL=false&serverTimezone=UTC
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.cloud.config.import-check.enabled=false
-
-
-
+#
+#
+#
